yaml/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authentication-middleware
  namespace: default
spec:
  forwardAuth:
    address: "http://auth-service.default.svc/auth"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-User
      - X-Token
      - X-Trace-ID
